<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContacto"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- ... (todo tu código XML actual) ... -->

            <TextView
                android:id="@+id/idTituloFormulario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/TitleContacto"
                android:textColor="#888888"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/id_Informacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/TextoContacto"
                android:textColor="#888888"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTituloFormulario" />

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/NombreContacto"
                android:textColor="#888888"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_Informacion" />

            <TextView
                android:id="@+id/lblApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/ApellidoContacto"
                android:textColor="#888888"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

            <EditText
                android:id="@+id/txtApellido"
                android:layout_width="332dp"
                android:layout_height="53dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/ApellidoContacto"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblApellido" />

            <TextView
                android:id="@+id/lblTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/TelefonoContacto"
                android:textColor="#888888"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/TelefonoContacto"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTelefono" />

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/EmailContacto"
                android:textColor="#888888"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="209dp"
                android:layout_height="53dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/EmailContacto"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

            <TextView
                android:id="@+id/lblDireccion"
                android:layout_width="75dp"
                android:layout_height="23dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/DireccionContacto"
                android:textColor="#888888"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="332dp"
                android:layout_height="53dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/DireccionContacto"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblDireccion" />

            <TextView
                android:id="@+id/lblFechaNacimiento"
                android:layout_width="173dp"
                android:layout_height="22dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:text="@string/FechaNacimientoContacto"
                android:textColor="#888888"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />

            <EditText
                android:id="@+id/txtFechaNacimiento"
                android:layout_width="331dp"
                android:layout_height="53dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:hint="@string/FechaNacimientoContacto"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblFechaNacimiento" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="332dp"
                android:layout_height="53dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/NombreContacto"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblNombre" />


            <Button
                android:id="@+id/btnContinuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/btnContinuar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.596"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtFechaNacimiento" />

            <Spinner
                android:id="@+id/spnTelefono"
                android:layout_width="101dp"
                android:layout_height="34dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="56dp"
                app:layout_constraintBottom_toTopOf="@+id/spnEmail"
                app:layout_constraintEnd_toEndOf="parent" />

            <Spinner
                android:id="@+id/spnEmail"
                android:layout_width="101dp"
                android:layout_height="34dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="96dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtDireccion"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


